refactor: clean up the codebase